# decodingus-navigator

./: .gitattributes  .gitignore  .sbtopts  ARCHITECTURE_MIGRATION_ANALYSIS.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  DEVELOPER.md  GEMINI.md  LEXICON_EVOLUTION.md  LICENSE  MOCKED_DATA.json  README.md  USER_GUIDE.md  build.sbt  package_app.sh  run_app.sh  rustfmt.toml  str_panels.txt  workspace.json
crates/navigator-analysis/: Cargo.toml
crates/navigator-analysis/examples/: denovo_profile.rs  place_y.rs  place_y_vcf.rs  profile_analysis.rs  profile_metrics.rs  reassembly_probe.rs  reassembly_validate.rs  site_reads.rs  str_calibrate.rs  validate_coverage.rs
crates/navigator-analysis/src/: ancestry.rs  caller.rs  callset.rs  cancel.rs  contig.rs  coverage.rs  error.rs  genotype.rs  gvcf.rs  gzio.rs  haplo.rs  heteroplasmy.rs  ibd.rs  ibd_attest.rs  ibd_panel.rs  index.rs  lib.rs  library_stats.rs  manifest.rs  mask.rs  mastervar.rs  mtvariants.rs  parity.rs  preflight.rs  probe.rs  read_metrics.rs  reader.rs  readview.rs  realign.rs  reassembly.rs  roh.rs  scan.rs  sex.rs  sidecar.rs  strcaller.rs  strmarker.rs  strref.rs  sv.rs  testtype.rs  unified.rs  (+1 more)
crates/navigator-analysis/src/sv/: caller.rs  clusterer.rs  evidence.rs  segmenter.rs  types.rs  walker.rs
crates/navigator-analysis/tests/: caller.rs  cancel_real.rs  coverage.rs  genotype.rs  heteroplasmy.rs  index.rs  mastervar_real.rs  parity_real.rs  read_metrics.rs  sex.rs  sv.rs  testtype_real.rs
crates/navigator-analysis/tests/fixtures/: coverage.bam  coverage.bam.bai  coverage.cram  coverage.cram.crai  diploid.bam  diploid.bam.bai  indel.bam  indel.bam.bai  indel_multi.bam  indel_multi.bam.bai  make_fixture.sh  paired.bam  paired.bam.bai  paired.cram  paired.cram.crai  ref.fa  ref.fa.fai  sex.bam  sex.bam.bai  sex.cram  sex.cram.crai  sexref.fa  sexref.fa.fai  snv_multi.bam  snv_multi.bam.bai  sv.bam  sv.bam.bai  sv.cram  sv.cram.crai  svref.fa  svref.fa.fai  ychr.bam  ychr.bam.bai
crates/navigator-app/: Cargo.toml
crates/navigator-app/assets/: brief-pack.seed.json
crates/navigator-app/src/: analysis.rs  auth.rs  brief.rs  commands.rs  dm.rs  error.rs  export.rs  fastpath.rs  ftdna_import.rs  haplogroup.rs  ibd_exchange.rs  import_profiles.rs  import_unified.rs  lib.rs  llm.rs  publish.rs  queries.rs  recruitment.rs  settings.rs  social.rs  sync.rs  sync_reconcile.rs  update.rs
crates/navigator-app/tests/: app.rs  mastervar_autosomal_real.rs
crates/navigator-domain/: Cargo.toml
crates/navigator-domain/src/: ancestry.rs  bisdna.rs  brief.rs  chipprofile.rs  consensus.rs  filetype.rs  ftdna.rs  ftdna_csv.rs  identity.rs  labs.rs  lib.rs  llm_prompt.rs  mtdna.rs  reconciliation.rs  results_context.rs  seq.rs  strchart.rs  strpanel.rs  strprofile.rs  testtype.rs  variants.rs  vendorvcf.rs  workspace.rs  ymatch.rs  yprofile.rs  ysnp_dict.rs  ystr_cluster.rs
crates/navigator-panelbuild/: Cargo.toml
crates/navigator-panelbuild/examples/: ascertain_chip.rs  ascertainment.rs  check_liftover.rs  filter_maf.rs  filter_sites.rs  filter_tv.rs  genotype_bed.rs  ibd_qpadm_orient.rs  inspect_panel.rs  overlap.rs  panel_overlap.rs  phaploid_fit.rs  polarity.rs  qpadm_check.rs  qpadm_from_tsv.rs  qpadm_selftest.rs  resolve_chip_dosage.rs  score_modern_from_tsv.rs  score_superpop_from_tsv.rs  verify_qpadm_fit.rs
crates/navigator-panelbuild/src/: genetic_map.rs  ibd_panel.rs  main.rs  manifest.rs  pca.rs  validate_ancient.rs
crates/navigator-refgenome/: Cargo.toml
crates/navigator-refgenome/examples/: lift_str_ref.rs
crates/navigator-refgenome/src/: cache.rs  download.rs  error.rs  gateway.rs  index.rs  lib.rs  regions.rs  registry.rs  vcf_lift.rs
crates/navigator-refgenome/tests/: live.rs
crates/navigator-store/: Cargo.toml
crates/navigator-store/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_alignment_files.down.sql  0002_alignment_files.up.sql  0003_panels.down.sql  0003_panels.up.sql  0004_str_profiles.down.sql  0004_str_profiles.up.sql  0005_variant_sets.down.sql  0005_variant_sets.up.sql  0006_chip_profiles.down.sql  0006_chip_profiles.up.sql  0007_mtdna_sequences.down.sql  0007_mtdna_sequences.up.sql  0008_haplogroup_calls.down.sql  0008_haplogroup_calls.up.sql  0009_variant_set_source_type.down.sql  0009_variant_set_source_type.up.sql  0010_reconciliation.down.sql  0010_reconciliation.up.sql  0011_ancestry_result.down.sql  0011_ancestry_result.up.sql  0012_ancestry_method.down.sql  0012_ancestry_method.up.sql  0013_ancestry_fit_distance.down.sql  0013_ancestry_fit_distance.up.sql  0014_variant_set_reference_build.down.sql  0014_variant_set_reference_build.up.sql  0015_alignment_content_hash.down.sql  0015_alignment_content_hash.up.sql  0016_haplogroup_call_fingerprint.down.sql  0016_haplogroup_call_fingerprint.up.sql  0017_analysis_artifact_provenance.down.sql  0017_analysis_artifact_provenance.up.sql  0018_sequence_run_lab.down.sql  0018_sequence_run_lab.up.sql  0019_chip_profile_source_path.down.sql  0019_chip_profile_source_path.up.sql  0020_y_profile.down.sql  0020_y_profile.up.sql  (+36 more)
crates/navigator-store/src/: alignment.rs  ancestry_result.rs  artifact.rs  biosample.rs  biosample_project.rs  chip_profile.rs  consensus_painting.rs  consensus_profile.rs  consensus_roh.rs  dm.rs  error.rs  external_id.rs  external_panel_dosage.rs  ftdna_member.rs  haplogroup_call.rs  ibd_exchange.rs  lib.rs  mdka.rs  mtdna.rs  panel.rs  project.rs  reconciliation.rs  sequence_run.rs  source_file.rs  str_profile.rs  sync_history.rs  sync_outbox.rs  sync_state.rs  variant_set.rs  y_profile.rs
crates/navigator-store/tests/: store.rs
crates/navigator-sync/: Cargo.toml
crates/navigator-sync/src/: device_key.rs  error.rs  exchange.rs  lib.rs  oauth.rs  publish.rs  records.rs  recruitment.rs  secret_store.rs  social.rs  sync.rs  tokens.rs
crates/navigator-ui/: Cargo.toml
crates/navigator-ui/icons/: icon.icns
crates/navigator-ui/locales/: en.txt  es.txt
crates/navigator-ui/src/: charts.rs  cli.rs  i18n.rs  main.rs  ui.rs  widgets.rs  worker.rs
crates/navigator-ui/src/ui/: branch.rs  chrome.rs  (+9 more)
(+464 files in other folders)
