[package]
name = "navigator-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Raw-read I/O (noodles) + the ported GATK walkers + the haploid variant caller.
# Uses du-bio for liftover/callable/coordinate math. noodles is added in phase 2.
[dependencies]
navigator-domain = { workspace = true }
du-bio = { workspace = true }
thiserror = { workspace = true }
noodles = { version = "0.93.0", features = ["bam", "sam", "fasta", "core", "csi"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
