[package]
name = "navigator-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Raw-read I/O (noodles) + the ported GATK walkers + the haploid variant caller.
# Uses du-bio for liftover/callable/coordinate math. noodles is added in phase 2.
[dependencies]
navigator-domain = { workspace = true }
du-bio = { workspace = true }
thiserror = { workspace = true }
noodles = { version = "0.111.0", features = ["bam", "bgzf", "cram", "sam", "fasta", "core", "csi", "vcf"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
sha2 = "0.10"
rayon = "1"
flate2 = "1"
# Pure-Rust POA assembly + pairwise (SW/affine) + PairHMM genotyping for the reassembly caller
# (Option B). Chosen over C-binding POA/WFA crates and htslib-based lorikeet because those lean on
# autotools/Make/POSIX and don't build under MSVC — bio and its deps are pure Rust, Windows-clean.
bio = "4"
