[package]
name = "navigator-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Raw-read I/O (noodles) + the ported GATK walkers + the haploid variant caller.
# Uses du-bio for liftover/callable/coordinate math. noodles is added in phase 2.
[dependencies]
navigator-domain = { workspace = true }
du-bio = { workspace = true }
thiserror = { workspace = true }
noodles = { version = "0.111.0", features = ["bam", "bgzf", "cram", "sam", "fasta", "core", "csi", "vcf"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
sha2 = "0.10"
rayon = "1"
nalgebra = "0.33"
flate2 = "1"
# Transparent bzip2 decode for CompleteGenomics masterVar (`.tsv.bz2`). 0.6 uses the pure-Rust
# `libbz2-rs-sys` backend (no C toolchain) — Windows-clean, matching the rest of the stack.
bzip2 = "0.6"
# Pure-Rust POA assembly + pairwise (SW/affine) + PairHMM genotyping for the reassembly caller
# (Option B). Chosen over C-binding POA/WFA crates and htslib-based lorikeet because those lean on
# autotools/Make/POSIX and don't build under MSVC — bio and its deps are pure Rust, Windows-clean.
bio = "4"
