[package]
name = "navigator-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Application/command layer: orchestrates store + analysis + sync behind a command
# API the UI dispatches to. No UI, no domain decisions in widgets.
[dependencies]
navigator-domain = { workspace = true }
navigator-store = { workspace = true }
navigator-analysis = { workspace = true }
navigator-sync = { workspace = true }
du-domain = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
