[package]
name = "navigator-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Application/command layer: orchestrates store + analysis + sync behind a command
# API the UI dispatches to. No UI, no domain decisions in widgets.
[dependencies]
navigator-domain = { workspace = true }
navigator-store = { workspace = true }
navigator-analysis = { workspace = true }
navigator-sync = { workspace = true }
navigator-refgenome = { workspace = true }
du-domain = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Content hashing of imported files (SHA-256, matching the legacy Scala import + AppView).
sha2 = "0.10"
# Holds the auth HTTP client (built by navigator-sync::dev_http_client). Pinned to 0.12
# with rustls to match du-atproto / navigator-sync.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Verify our device-key signatures with the same code the AppView runs (federated IBD test).
du-atproto = { workspace = true }
