[package]
name = "navigator-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# PDS push/pull + AsyncSync; coverage publishing + variant-proposal submission.
# OAuth (public/native client) reuses du-atproto. Implemented in phase 6.
[dependencies]
navigator-domain = { workspace = true }
du-atproto = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS keychain for tokens; per-platform native backends + a mock for tests.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
