[package]
name = "navigator-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# PDS push/pull + AsyncSync; coverage publishing + variant-proposal submission.
# OAuth (public/native client) reuses du-atproto. Implemented in phase 6.
[dependencies]
navigator-domain = { workspace = true }
du-domain = { workspace = true }
du-atproto = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS keychain for tokens; per-platform native backends + a mock for tests.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# Per-device Ed25519 signing key for authenticated Edge↔AppView calls (signing side;
# du-atproto already carries the verify side). base64-STANDARD wire encoding.
ed25519-dalek = "2"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
# IBD Phase-2 encrypted edge-to-edge exchange (D1): X25519 ECDH (X3DH-lite) → HKDF-SHA-256
# session key → AES-256-GCM envelope. The AppView only relays the opaque ciphertext.
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
