[package]
name = "navigator-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# egui/eframe desktop front end (thin: render view-state + dispatch commands).
# Binary is `navigator`. egui/eframe are added in phase 5.
[[bin]]
name = "navigator"
path = "src/main.rs"

[dependencies]
eframe = "0.30.0"
navigator-app = { workspace = true }
navigator-domain = { workspace = true }
rfd = "0.17.2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync", "macros"] }

[dev-dependencies]
navigator-store = { workspace = true }
