[package]
name = "navigator-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Decoding-Us Navigator — local bioinformatics analysis of personal genomes (BAM/CRAM, Y/mtDNA haplogroups, ancestry, IBD)."
homepage = "https://decoding-us.com"
authors = ["Decoding-Us"]

# egui/eframe desktop front end (thin: render view-state + dispatch commands).
# Binary is `navigator`. egui/eframe are added in phase 5.
[[bin]]
name = "navigator"
path = "src/main.rs"

# cargo-packager (CrabNebula) config — produces the OS-native installer images. See
# docs/design/packaging-and-release.md. The ancestry/IBD assets are staged into
# packaging/staging/ancestry by packaging/stage-assets.sh (run via before-packaging-command) and
# bundled as image resources under `ancestry/`; the app seeds them to ~/.decodingus/ancestry/ on
# first run (navigator_app::seed_bundled_assets).
[package.metadata.packager]
product-name = "DUNavigator"
identifier = "com.decodingus.navigator"
category = "Utility"
icons = ["icons/icon.icns", "icons/icon.png"]
before-packaging-command = "bash ../../packaging/stage-assets.sh"
resources = [
    { src = "../../packaging/staging/ancestry", target = "ancestry" },
    { src = "../../packaging/staging/masks", target = "masks" },
    { src = "../../packaging/staging/str", target = "str" },
]

[package.metadata.packager.macos]
minimum-system-version = "11.0"
# Gates cargo-packager's sign+notarize path (it's read only from config, never an env var). The cert
# (APPLE_CERTIFICATE/_PASSWORD) and notary auth (APPLE_ID/_PASSWORD/_TEAM_ID) come from CI env vars;
# hardened runtime + timestamp are applied automatically. Identity is public (embedded in every
# signed artifact), so committing it is fine. Team ID here (5DKX9P6769) must match APPLE_TEAM_ID.
signing-identity = "Developer ID Application: James Kane (5DKX9P6769)"

[package.metadata.packager.nsis]
# Windows installer (Alpha ships unsigned; Authenticode/Trusted-Signing added before beta).

[features]
# Surface the dev-only "Use local identity" (did:key) button in a RELEASE build. Off by default, so
# distributed builds never show it; debug builds show it automatically (via `debug_assertions`).
dev-identity = []

[dependencies]
# System clipboard, for copying a diagnosis report out of the app. eframe owns the window's own
# clipboard, but a modal that exists to get text into a bug report needs a copy that works even
# when the platform backend hands egui an empty one, so this is used directly.
# `default-features = false` drops the `image-data` feature: it is on by default and pulls a stack
# of image codecs (tiff/zune-jpeg/weezl/…) to support copying bitmaps. This only ever copies text.
# The crate itself is already in the tree via eframe, so this adds no new build unit.
arboard = { version = "3", default-features = false }
clap = { version = "4", features = ["derive"] }
eframe = "0.30.0"
egui_extras = "0.30.0"
egui_plot = "0.30.0"
navigator-app = { workspace = true }
navigator-domain = { workspace = true }
rfd = "0.17.2"
serde_json = "1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync", "macros"] }

[dev-dependencies]
navigator-store = { workspace = true }
